--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,7 +6,7 @@ spring:
     accessTokenExpiration: 7200 #2H
     refreshTokenExpiration: 604800 #7d
   profiles:
-    active: dev
+    active: prod
   stripe:
     secretKey: ${STRIPE_SECRET_KEY}
     webhookSecretKey: ${STRIPE_WEBHOOK_SECRET_KEY}
